--- a/Deepa.html
+++ b/Deepa.html
@@ -5,3 +5,4 @@
 <p> Malik was born to Veena Nagpal and Bal Krishan Nagpal in 1970.[5] Her father was in the Indian Army. Her brother, Vikram Nagpal, is a brigadier in the Indian Army.[5] Her elder daughter, Devika, is studying sports psychology.[5] At 5, she was diagnosed with a spinal tumor for which she underwent three years of treatment. The treatment was successful but Malik required aggressive physiotherapy to recover.
 
   In 1999 at age 29, Malik was again diagnosed with spinal tumor. She underwent three surgeries to successfully remove the tumor but the surgeries left her paralyzed from the waist down. Afterwards, she again underwent physiotherapy for six years. [6] After recovering, Malik began to develop an interest in sports. She became a swimmer and a biker, and soon afterwards swam across the River Yamuna</p>
+<p>Contact : 8610853737</p>
